--- a/manifest.plist
+++ b/manifest.plist
@@ -9,7 +9,7 @@
                 <array>
                     <dict>
                         <key>url</key>
-                        <string>https://raw.githubusercontent.com/the-best-looking-is-me/jsDemo/master/paileme.ipa</string>
+                        <string>https://img.pailemegou.cn/download/ios/paileme.ipa</string>
                         <key>kind</key>
                         <string>software-package</string>
                     </dict>
@@ -18,14 +18,14 @@
                         <key>kind</key>
                         <string>display-image</string>
                         <key>url</key>
-                        <string>https://raw.githubusercontent.com/the-best-looking-is-me/jsDemo/master/57X57.png</string>
+                        <string>https://img.pailemegou.cn/download/ios/57X57.png</string>
                     	</dict>
 
 			<dict>
                         <key>kind</key>
                         <string>full-size-image</string>
                         <key>url</key>
-                        <string>https://raw.githubusercontent.com/the-best-looking-is-me/jsDemo/master/521X521.png</string>
+                        <string>https://img.pailemegou.cn/download/ios/512X512.png</string>
                     	</dict>
 			
                 </array>
