--- a/manifest.plist
+++ b/manifest.plist
@@ -9,7 +9,7 @@
                 <array>
                     <dict>
                         <key>url</key>
-                        <string>https://img.pailemegou.cn/download/ios/paileme.ipa</string>
+                        <string>https://img.pailemegou.cn/paileme.ipa</string>
                         <key>kind</key>
                         <string>software-package</string>
                     </dict>
