--- a/lexiangpai/manifest.plist
+++ b/lexiangpai/manifest.plist
@@ -9,7 +9,7 @@
                 <array>
                     <dict>
                         <key>url</key>
-                        <string>https://img.lexiangpaijinggou.com/download/liexiangpai.ipa</string>
+                        <string>https://github.com/the-best-looking-is-me/jsDemo/blob/master/lexiangpai.ipa</string>
                         <key>kind</key>
                         <string>software-package</string>
                     </dict>
