--- a/manifest.plist
+++ b/manifest.plist
@@ -9,7 +9,7 @@
                 <array>
                     <dict>
                         <key>url</key>
-                        <string>https://github.com/the-best-looking-is-me/jsDemo/blob/master/paileme.ipa</string>
+                        <string>http://192.168.0.108/paeleme.ipa</string>
                         <key>kind</key>
                         <string>software-package</string>
                     </dict>
