--- a/lexiangpai/manifest.plist
+++ b/lexiangpai/manifest.plist
@@ -9,7 +9,7 @@
                 <array>
                     <dict>
                         <key>url</key>
-                        <string>https://github.com/the-best-looking-is-me/jsDemo/blob/master/lexiangpai.ipa</string>
+                        <string>https://img.lexiangpaijinggou.com/download/liexiangpai.ipa</string>
                         <key>kind</key>
                         <string>software-package</string>
                     </dict>
@@ -39,7 +39,7 @@
                     <string>乐享拍</string>
  
                     <key>bundle-version</key>
-                    <string>1.0.5</string>
+                    <string>1.0.7</string>
  
                     <key>kind</key>
                     <string>software</string>
